--- a/.github/workflows/ssa2.yml
+++ b/.github/workflows/ssa2.yml
@@ -1,4 +1,4 @@
-name: SSA 2 - Workflow with Enhanced Steps and Logs
+name: SSA 2 - Workflow with Enhanced Steps and Real-Life Logs
 
 on:
   workflow_dispatch:
@@ -9,47 +9,7 @@ on:
         type: string
 
 jobs:
-  create-deployments:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Generate Access Token
-        id: generate-token
-        run: |
-          access_token=$(curl --location --request POST 'https://api.getport.io/v1/auth/access_token' \
-          --header 'Content-Type: application/json' \
-          --data-raw '{
-              "clientId": "'${{ secrets.PORT_CLIENT_ID }}'",
-              "clientSecret": "'${{ secrets.PORT_CLIENT_SECRET }}'"
-          }' | jq '.accessToken' | sed 's/"//g')
-          echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
-
-      - name: Sleep for 5 Seconds
-        run: sleep 5
-
-      - name: Trigger First Deployment
-        id: deploy-1
-        run: |
-          curl -L -X POST "https://api.getport.io/v1/blueprints/deployment/entities" \
-          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "identifier": "deployment-1-${{ github.run_id }}",
-            "title": "First Deployment for Workflow - ${{ fromJson(inputs.port_payload).workflow_id }}",
-            "blueprint": "deployment",
-            "properties": {
-              "status": "IN_PROGRESS",
-              "status_message": "First deployment in progress."
-            },
-            "relations": {
-              "workflow": "${{ fromJson(inputs.port_payload).workflow_id }}"
-            }
-          }'
-
   process-steps:
-    needs: create-deployments
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -82,7 +42,7 @@ jobs:
             "properties": {
               "status": "COMPLETED",
               "status_message": "Step 1 completed successfully.",
-              "log_stream": "### Log Stream for Step 1\n- Deployment: deployment-1-${{ github.run_id }}\n- Status: **COMPLETED**\n- Message: Step 1 completed successfully.\n- Timestamp: $(date -u +"%Y-%m-%dT%H:%M:%SZ")"
+              "log_stream": "### Log Stream for Step 1\n**Deployment:** deployment-1-${{ github.run_id }}\n**Status:** **COMPLETED**\n**Message:** Starting deployment for service `user-service`.\n\n#### Logs:\n- Initializing deployment process for `user-service`.\n- Fetching container image `user-service:v1.2.3`.\n- Connecting to cluster `prod-cluster-01`.\n- Deployment status: Pending.\n- Deployment completed successfully.\n- Verified successful health checks.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
             },
             "relations": {
               "deployment": "deployment-1-${{ github.run_id }}"
@@ -105,7 +65,7 @@ jobs:
             "properties": {
               "status": "FAILED",
               "status_message": "Step 2 encountered an unexpected error.",
-              "log_stream": "### Log Stream for Step 2\n- Deployment: deployment-1-${{ github.run_id }}\n- Status: **FAILED**\n- Error: Step 2 encountered an unexpected error.\n- Timestamp: $(date -u +"%Y-%m-%dT%H:%M:%SZ")"
+              "log_stream": "### Log Stream for Step 2\n**Deployment:** deployment-1-${{ github.run_id }}\n**Status:** **FAILED**\n**Error:** Image pull failed due to network timeout.\n\n#### Logs:\n- Fetching container image `user-service:v1.2.3`.\n- Retrying pull operation (attempt 1 of 3)...\n- Retrying pull operation (attempt 2 of 3)...\n- Retrying pull operation (attempt 3 of 3)...\n- Final error: Image pull failed. Deployment aborted.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
             },
             "relations": {
               "deployment": "deployment-1-${{ github.run_id }}"
