--- a/.github/workflows/ssa2.yml
+++ b/.github/workflows/ssa2.yml
@@ -1,4 +1,4 @@
-name: SSA 2 - Workflow with Enhanced Steps and Real-Life Logs
+name: SSA 2 - Workflow with Multiple Deployments, Steps, and Logs
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
         type: string
 
 jobs:
-  process-steps:
+  create-deployments:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -29,7 +29,50 @@ jobs:
       - name: Sleep for 5 Seconds
         run: sleep 5
 
-      - name: Create Step 1 with Logs (Success)
+      - name: Trigger First Deployment
+        id: deploy-1
+        run: |
+          curl -L -X POST "https://api.getport.io/v1/blueprints/deployment/entities" \
+          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "identifier": "deployment-1-${{ github.run_id }}",
+            "title": "First Deployment for Workflow - ${{ fromJson(inputs.port_payload).workflow_id }}",
+            "blueprint": "deployment",
+            "properties": {
+              "status": "IN_PROGRESS",
+              "status_message": "First deployment in progress."
+            },
+            "relations": {
+              "workflow": "${{ fromJson(inputs.port_payload).workflow_id }}"
+            }
+          }'
+
+      - name: Sleep for 5 Seconds
+        run: sleep 5
+
+  process-deployments:
+    needs: create-deployments
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Generate Access Token
+        id: generate-token
+        run: |
+          access_token=$(curl --location --request POST 'https://api.getport.io/v1/auth/access_token' \
+          --header 'Content-Type: application/json' \
+          --data-raw '{
+              "clientId": "'${{ secrets.PORT_CLIENT_ID }}'",
+              "clientSecret": "'${{ secrets.PORT_CLIENT_SECRET }}'"
+          }' | jq '.accessToken' | sed 's/"//g')
+          echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
+
+      - name: Sleep for 5 Seconds
+        run: sleep 5
+
+      - name: First Deployment - Step 1 with Logs (Success)
         id: step-1-deploy-1
         run: |
           curl -L -X POST "https://api.getport.io/v1/blueprints/step/entities" \
@@ -42,7 +85,7 @@ jobs:
             "properties": {
               "status": "COMPLETED",
               "status_message": "Step 1 completed successfully.",
-              "log_stream": "### Log Stream for Step 1\n**Deployment:** deployment-1-${{ github.run_id }}\n**Status:** **COMPLETED**\n**Message:** Starting deployment for service `user-service`.\n\n#### Logs:\n- Initializing deployment process for `user-service`.\n- Fetching container image `user-service:v1.2.3`.\n- Connecting to cluster `prod-cluster-01`.\n- Deployment status: Pending.\n- Deployment completed successfully.\n- Verified successful health checks.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
+              "log_stream": "### Log Stream for Step 1\n**Deployment:** deployment-1-${{ github.run_id }}\n**Status:** **COMPLETED**\n**Message:** Step 1 completed successfully.\n\n#### Logs:\n- Container image `user-service:v1.2.3` pulled successfully.\n- Applied Kubernetes deployment manifest.\n- Service is running at `https://prod-cluster-01.example.com/user-service`.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
             },
             "relations": {
               "deployment": "deployment-1-${{ github.run_id }}"
@@ -52,7 +95,7 @@ jobs:
       - name: Sleep for 5 Seconds
         run: sleep 5
 
-      - name: Create Step 2 with Logs (Failure)
+      - name: First Deployment - Step 2 with Logs (Success)
         id: step-2-deploy-1
         run: |
           curl -L -X POST "https://api.getport.io/v1/blueprints/step/entities" \
@@ -63,9 +106,9 @@ jobs:
             "title": "Step 2 for First Deployment",
             "blueprint": "step",
             "properties": {
-              "status": "FAILED",
-              "status_message": "Step 2 encountered an unexpected error.",
-              "log_stream": "### Log Stream for Step 2\n**Deployment:** deployment-1-${{ github.run_id }}\n**Status:** **FAILED**\n**Error:** Image pull failed due to network timeout.\n\n#### Logs:\n- Fetching container image `user-service:v1.2.3`.\n- Retrying pull operation (attempt 1 of 3)...\n- Retrying pull operation (attempt 2 of 3)...\n- Retrying pull operation (attempt 3 of 3)...\n- Final error: Image pull failed. Deployment aborted.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
+              "status": "COMPLETED",
+              "status_message": "Step 2 completed successfully.",
+              "log_stream": "### Log Stream for Step 2\n**Deployment:** deployment-1-${{ github.run_id }}\n**Status:** **COMPLETED**\n**Message:** Verified successful health checks for `user-service`.\n\n#### Logs:\n- Running health check on `https://prod-cluster-01.example.com/user-service`.\n- Service responded with HTTP 200.\n- Deployment validated successfully.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
             },
             "relations": {
               "deployment": "deployment-1-${{ github.run_id }}"
@@ -75,33 +118,22 @@ jobs:
       - name: Sleep for 5 Seconds
         run: sleep 5
 
-      - name: Update Deployment as Failed
-        if: always()
-        id: fail-deployment-1
+      - name: Second Deployment - Step 3 with Logs (Failure)
+        id: step-3-deploy-2
         run: |
-          curl -L -X PATCH "https://api.getport.io/v1/blueprints/deployment/entities/deployment-1-${{ github.run_id }}" \
+          curl -L -X POST "https://api.getport.io/v1/blueprints/step/entities" \
           -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
           -H "Content-Type: application/json" \
           -d '{
+            "identifier": "step-3-deployment-2-${{ github.run_id }}",
+            "title": "Step 3 for Second Deployment",
+            "blueprint": "step",
             "properties": {
               "status": "FAILED",
-              "status_message": "Step 2 has failed with error: Step 2 encountered an unexpected error."
-            }
-          }'
-
-      - name: Sleep for 5 Seconds
-        run: sleep 5
-
-      - name: Update Workflow as Failed
-        if: always()
-        id: fail-workflow
-        run: |
-          curl -L -X PATCH "https://api.getport.io/v1/blueprints/workflow/entities/${{ fromJson(inputs.port_payload).workflow_id }}" \
-          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "properties": {
-              "status": "FAILED",
-              "status_message": "Deployment deployment-1, step 2 has failed with error: Step 2 encountered an unexpected error."
+              "status_message": "Step 3 encountered an unexpected error.",
+              "log_stream": "### Log Stream for Step 3\n**Deployment:** deployment-2-${{ github.run_id }}\n**Status:** **FAILED**\n**Error:** Failed to deploy service `order-service`.\n\n#### Logs:\n- Fetching container image `order-service:v2.5.1`.\n- Error: Image pull failed due to network timeout.\n- Retrying pull operation (attempt 1 of 3)...\n- Retrying pull operation (attempt 2 of 3)...\n- Retrying pull operation (attempt 3 of 3)...\n- Final error: Image pull failed. Deployment aborted.\n\n**Timestamp:** $(date -u +\"%Y-%m-%dT%H:%M:%SZ\")"
+            },
+            "relations": {
+              "deployment": "deployment-2-${{ github.run_id }}"
             }
           }'
